--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -34,7 +34,7 @@ rules:
         - media-query
   no-warn: 0
   no-debug: 0
-  indentation: false
+  indentation: 0
   variable-for-property:
     - 0
   no-css-comments: 0
