Adding external icons to key detail area

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.yaml
@@ -6,9 +6,9 @@ context:
     next_open_day_end_date: !!timestamp '2020-12-15 2:00:00'
     get_in_touch: <p>0123456789</p><p>email@rca.ac.uk</p>
     social_links:
-      - '<a>Facebook</a>'
-      - '<a>Twitter</a>'
-      - '<a>Instagram</a>'
+      - '<a href="#" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Facebook</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
+      - '<a href="#" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Twitter</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
+      - '<a href="#" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Instagram</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
 
   open_day_link:
     get_link_url: #
