--- a/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
@@ -14,8 +14,8 @@ context:
     next_open_day_end_date: !!timestamp '2021-02-27 2:00:00'
     get_in_touch: <p>0123456789</p><p><a href="">soa-admins@rca.ac.uk</a></p>
     social_links:
-      - '<a href="https://twitter.com/rcaarchitecture">Twitter</a>'
-      - '<a href="https://www.instagram.com/rca.architecture/">Instagram</a>'
+      - '<a href="https://twitter.com/rcaarchitecture" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Twitter</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
+      - '<a href="https://www.instagram.com/rca.architecture/" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Instagram</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
     video: 'https://www.youtube.com/watch?v=rjt5p56Bcp4&list=PLk-Jp7vRQvwNbjjrvBcC0mDttD0OWaLUZ&index=3'
     video_caption: Welcome to the School
     body: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
