--- a/rca/project_styleguide/templates/patterns/pages/forms/thanks.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/forms/thanks.yaml
@@ -1,7 +1,7 @@
 context:
   page:
-    title: Some form
-    introduction: Some intro
+    title: Thanks
+    introduction: Your enquiry about an Architecture MA has now been received and we will respond to you within 48 hours.
 
 tags:
   pageurl:
