--- a/rca/project_styleguide/templates/patterns/pages/forms/thanks.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/forms/thanks.yaml
@@ -2,37 +2,36 @@ context:
   page:
     title: Thanks
     introduction: Your enquiry about an Architecture MA has now been received and we will respond to you within 48 hours.
-  about_teasers:
-    - {
-        title: 'Innovation RCA',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-        image: true,
-      }
-    - {
-        title: 'Consultancy & knowledge exchange',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-        image: true,
-      }
-    - {
-        title: 'Custom executive education',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-        image: true,
-      }
+    teasers:
+      title: More about Architecture
+      introduction: Expand the possibilities of your practice by developing a speculative, independent and critical ethos…
+      items:
+        - {
+            title: 'School of Architecture',
+            link: '#',
+            meta: false,
+            person: false,
+            description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
+            image: true,
+          }
+        - {
+            title: 'Student experience case study',
+            link: '#',
+            meta: false,
+            person: false,
+            description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. ',
+            image: true,
+          }
+        - {
+            title: 'Additional architecture teaser',
+            link: '#',
+            meta: false,
+            person: false,
+            description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. ',
+            image: true,
+          }
   cta:
-    title: Lab. for Design & Machine Learning
-    description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
-    action: Find out more
+    title: Browse our programmes
+    description: Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas sed diam eget risus varius blandit sit amet non magna.
+    action: Our Programmes
     link: '#'
-tags:
-  pageurl:
-    page:
-      raw: '#'
