--- a/rca/project_styleguide/templates/patterns/molecules/steps/steps.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/steps/steps.yaml
@@ -1,5 +1,5 @@
 context:
-  page:
+  programme_page_global_fields:
     apply_cta_link: '#'
     apply_cta_text: Apply now via our application portal
   steps:
