--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -149,6 +149,28 @@ context:
     related_programmes_summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
     related_short_courses_title: Our short courses
     related_short_courses_summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros magna, rhoncus vitae leo condimentum, luctus hendrerit justo. Curabitur iaculis purus ac pellentesque tempor.
+    legacy_news_and_events:
+      - item:
+        meta: 'Event'
+        title: 'Designs for Real Life'
+        description: '6 July 2019 — 4 August 2019'
+        link: '#'
+        image: //placekitten.com/526/402
+        person: false
+      - item:
+        meta: 'Event'
+        title: 'Redefining Boundaries: Architecture Work-in-progress 2019'
+        description: '23 November 2019'
+        link: '#'
+        image: false
+        person: false
+      - item:
+        meta: 'News'
+        title: 'Show 2018: School of Architecture: Making Space for the Future'
+        description: '23 November 2019'
+        link: '#'
+        image: //placekitten.com/251/142
+        person: false
   hero_image:
     title: Synaputral Decadence is the flavour of the distant future
     creator: Jianjin Lee Chen
@@ -176,28 +198,6 @@ context:
           description: 'The School of Arts & Humanities offers students and researchers the opportunity to develop their own practices and careers as artists, makers, historians, theorists, writers and curators. All are encouraged to focus in depth on the particularities of their own work while also being exposed to more critically diverse positions across the School.',
           image: true,
         }
-  news_and_events:
-    - item:
-      meta: 'News'
-      title: 'Dr Chantal Faust appointed as Head of Programme for MA Contemporary Art Practice'
-      description: '7 Oct 2020'
-      link: 'https://www.rca.ac.uk/news-and-events/news/dr-chantal-faust-appointed-head-programme-ma-contemporary-art-practice/'
-      image: //placekitten.com/526/402
-      person: false
-    - item:
-      meta: 'Event'
-      title: 'RCASU Solidarity Series: Border Lines'
-      description: '19 Nov 2020'
-      link: 'https://www.rca.ac.uk/news-and-events/events/solidarity-series-border-lines/'
-      image: false
-      person: false
-    - item:
-      meta: 'News'
-      title: 'RCA Painting student wins £10,000 Castlegate Art Prize'
-      description: '16 Sept 2020'
-      link: 'https://www.rca.ac.uk/news-and-events/news/ma-painting-student-wins-10000-castlegate-art-prize/'
-      image: //placekitten.com/251/142
-      person: false
   related_programmes:
     - item:
       link:
