--- a/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
@@ -191,6 +191,7 @@ context:
           programme_description_subtitle: Turning innovation into successful real-world businesses.
           hero_image: http://placehold.it/300x270
   stats_block:
+    title: false
     statistics:
       - stat:
         value:
