Select and general form styling

--- a/rca/project_styleguide/templates/patterns/atoms/form-input/form-input--error.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-input/form-input--error.yaml
@@ -2,4 +2,6 @@ context:
   field:
     label: Standard input error
     id_for_label: input-error
+    field:
+      required: True
     errors: Required
