Magic yaml fix, thanks Kevin

--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.yaml
@@ -9,9 +9,10 @@ context:
         }
       - {
           title: Next steps,
-          content: 'After filling out the form, you’ll recieve an email confirmation. You’ll then usually recieve a response from our admissions team within 48 hours.',
+          content: "After filling out the form, you'll recieve an email confirmation. You'll then usually recieve a response from our admissions team within 48 hours.",
         }
-
+  field:
+    - value
 tags:
   pageurl:
     page:
